--- a/Learning-Python/Codecademy/Matplotlib/script.ipynb
+++ b/Learning-Python/Codecademy/Matplotlib/script.ipynb
@@ -42,7 +42,7 @@
     "\n",
     "By the end of the lesson, you will be well on your way to becoming a master at presenting and organizing your data in Python.<br>\n",
     "<br>\n",
-    "To the right, you can see an example of the kind of chart you’ll be able to make by the end of this lesson!"
+    "To the right, you can see an example of the kind of chart you will be able to make by the end of this lesson!"
    ],
    "cell_type": "markdown",
    "metadata": {}
