--- a/Learning-Python/Codecademy/Page_Visits_Funnel/script.ipynb
+++ b/Learning-Python/Codecademy/Page_Visits_Funnel/script.ipynb
@@ -34,7 +34,7 @@
     "\n",
     "    A user visits CoolTShirts.com\n",
     "    A user adds a t-shirt to their cart\n",
-    "    A user clicks “checkout”\n",
+    "    A user clicks \"checkout\"\n",
     "    A user actually purchases a t-shirt"
    ],
    "cell_type": "markdown",
