Fixed introduction list in explanation

--- a/Learning-Python/Codecademy/Page_Visits_Funnel/script.ipynb
+++ b/Learning-Python/Codecademy/Page_Visits_Funnel/script.ipynb
@@ -32,10 +32,10 @@
     "\n",
     "In this case, our funnel is going to describe the following process:\n",
     "\n",
-    "    A user visits CoolTShirts.com\n",
-    "    A user adds a t-shirt to their cart\n",
-    "    A user clicks \"checkout\"\n",
-    "    A user actually purchases a t-shirt"
+    "* A user visits CoolTShirts.com\n",
+    "* A user adds a t-shirt to their cart\n",
+    "* A user clicks \"checkout\"\n",
+    "* A user actually purchases a t-shirt"
    ],
    "cell_type": "markdown",
    "metadata": {}
