--- a/Learning-Python/Codecademy/Statistics/07_Hypothesis_Testing.ipynb
+++ b/Learning-Python/Codecademy/Statistics/07_Hypothesis_Testing.ipynb
@@ -2212,7 +2212,7 @@
     "In the last exercise, we looked at data where customers visited a website and either made a purchase or did not make a purchase. What if we also wanted to understand if the probability of making a purchase depends on some other categorical variable, like gender? If we want to understand whether the outcomes of two categorical variables are associated, we should use a _Chi Square_ test. It is useful in situations like:\n",
     "\n",
     "* An A/B test where half of users were shown a green submit button and the other half were shown a purple submit button. Was one group more likely to click the submit button?\n",
-    "* People under and over age 40 were given a survey asking “Which of the following three products is your favorite?” Did these age groups have significantly different preferences?\n",
+    "* People under and over age 40 were given a survey asking \"Which of the following three products is your favorite?\" Did these age groups have significantly different preferences?\n",
     "\n",
     "In SciPy, you can use the function `chi2_contingency` to perform a Chi Square test.\n",
     "\n",
