--- a/Learning-Python/Codecademy/Reggie_Linear_Regression/Reggie_Linear_Regression_Skeleton.ipynb
+++ b/Learning-Python/Codecademy/Reggie_Linear_Regression/Reggie_Linear_Regression_Skeleton.ipynb
@@ -36,24 +36,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "False\n",
-      "False\n"
+      "True\nTrue\n"
      ]
     }
    ],
    "source": [
     "def get_y(m, b, x):\n",
-    "  pass\n",
+    "  return m * x + b\n",
     "\n",
     "print(get_y(1, 0, 7) == 7)\n",
-    "print(get_y(5, 10, 3) == 25)\n"
+    "print(get_y(5, 10, 3) == 25)"
    ]
   },
   {
@@ -61,9 +60,10 @@
    "metadata": {},
    "source": [
     "\n",
-    "Reggie wants to try a bunch of different `m` values and `b` values and see which line produces the least error. To calculate error between a point and a line, he wants a function called `calculate_error()`, which will take in `m`, `b`, and an [x, y] point called `point` and return the distance between the line and the point.\n",
+    "Reggie wants to try a bunch of different `m` values and `b` values and see which line produces the least error. To calculate error between a point and a line, he wants a function called `calculate_error()`, which will take in `m`, `b`, and an `[x, y]` point called `point` and return the distance between the line and the point.\n",
     "\n",
     "To find the distance:\n",
+    "\n",
     "1. Get the x-value from the point and store it in a variable called `x_point`\n",
     "2. Get the y-value from the point and store it in a variable called `y_point`\n",
     "3. Use `get_y()` to get the y-value that `x_point` would be on the line\n",
@@ -81,7 +81,11 @@
    },
    "outputs": [],
    "source": [
-    "#Write your calculate_error() function here"
+    "def calculate_error(m, b, point):\n",
+    "    x_point, y_point = point\n",
+    "    y = get_y(m, b, x_point)\n",
+    "    result = abs(y - y_point)\n",
+    "    return result"
    ]
   },
   {
@@ -97,13 +101,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "0\n",
-      "1\n",
-      "1\n",
-      "5\n"
+      "0\n1\n1\n5\n"
      ]
     }
    ],
@@ -153,13 +154,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "#Write your calculate_all_error function here"
+    "def calculate_all_error(m, b, datapoints):\n",
+    "    result = 0\n",
+    "    for datapoint in datapoints:\n",
+    "        result += calculate_error(m, b, datapoint)\n",
+    "    return result"
    ]
   },
   {
@@ -171,18 +176,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'calculate_all_error' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-82106fee0c4b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#every point in this dataset lies upon y=x, so the total error should be zero:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mdatapoints\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcalculate_all_error\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdatapoints\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m#every point in this dataset is 1 unit away from y = x + 1, so the total error should be 4:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'calculate_all_error' is not defined"
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "0\n4\n4\n18\n"
      ]
     }
    ],
@@ -236,13 +237,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "possible_ms = #your list comprehension here"
+    "possible_ms = [i / 10 for i in range(-100, 101)]"
    ]
   },
   {
@@ -254,13 +255,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "possible_bs = #your list comprehension here"
+    "possible_bs = [i / 10 for i in range(-20, 21)]"
    ]
   },
   {
@@ -288,18 +289,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "0.30000000000000004 1.7000000000000002 4.999999999999999\n"
+      "0.4 1.6 5.0\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "datapoints = [(1, 2), (2, 0), (3, 4), (4, 4), (5, 3)]\n",
+    "smallest_error = float(\"inf\")\n",
+    "best_m = 0\n",
+    "best_b = 0\n",
+    "\n",
+    "for m in possible_ms:\n",
+    "    for b in possible_bs:\n",
+    "        error = calculate_all_error(m, b, datapoints)\n",
+    "        if error < smallest_error:\n",
+    "            smallest_error = error\n",
+    "            best_m = m\n",
+    "            best_b = b\n",
+    "\n",
+    "print(best_m, best_b, smallest_error)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -307,56 +323,50 @@
    "source": [
     "## Part 3: What does our model predict?\n",
     "\n",
-    "Now we have seen that for this set of observations on the bouncy balls, the line that fits the data best has an `m` of 0.3 and a `b` of 1.7:\n",
+    "Now we have seen that for this set of observations on the bouncy balls, the line that fits the data best has an `m` of 0.4 and a `b` of 1.6:\n",
     "\n",
     "```\n",
-    "y = 0.3x + 1.7\n",
+    "y = 0.4x + 1.6\n",
     "```\n",
     "\n",
     "This line produced a total error of 5.\n",
     "\n",
     "Using this `m` and this `b`, what does your line predict the bounce height of a ball with a width of 6 to be?\n",
     "In other words, what is the output of `get_y()` when we call it with:\n",
-    "* m = 0.3\n",
-    "* b = 1.7\n",
+    "* m = 0.4\n",
+    "* b = 1.6\n",
     "* x = 6"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "3.5"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "4.0\n"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "m = 0.4\n",
+    "b = 1.6\n",
+    "x = 6\n",
+    "\n",
+    "print(get_y(m, b, x))"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our model predicts that the 6cm ball will bounce 3.5m.\n",
+    "Our model predicts that the 6cm ball will bounce 4m.\n",
     "\n",
     "Now, Reggie can use this model to predict the bounce of all kinds of sizes of balls he may choose to include in the ball pit!"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -375,7 +385,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.7.6-final"
   }
  },
  "nbformat": 4,
