--- a/Learning-Python/Codecademy/Frida_Kahlo/frida_solution.ipynb
+++ b/Learning-Python/Codecademy/Frida_Kahlo/frida_solution.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -64,12 +64,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "[('The Two Fridas', 1939), ('My Dress Hangs Here', 1933), ('Tree of Hope', 1946), ('Self Portrait With Monkeys', 1940)]\n"
      ]
@@ -77,7 +77,7 @@
    ],
    "source": [
     "paintings = list(zip(paintings, dates))\n",
-    "print (paintings)"
+    "print(paintings)"
    ]
   },
   {
@@ -95,12 +95,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "[('The Two Fridas', 1939), ('My Dress Hangs Here', 1933), ('Tree of Hope', 1946), ('Self Portrait With Monkeys', 1940), ('The Broken Column', 1944), ('The Wounded Deer', 1946), ('Me and My Doll', 1937)]\n"
      ]
@@ -111,7 +111,7 @@
     "paintings.append(('The Wounded Deer', 1946))\n",
     "paintings.append(('Me and My Doll', 1937))\n",
     "    \n",
-    "print (paintings)"
+    "print(paintings)"
    ]
   },
   {
@@ -127,18 +127,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "7"
       ]
      },
-     "execution_count": 57,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 5
     }
    ],
    "source": [
@@ -156,12 +156,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "[1, 2, 3, 4, 5, 6, 7]\n"
      ]
@@ -170,7 +170,7 @@
    "source": [
     "audio_tour_number = list(range(1, 8))\n",
     "\n",
-    "print (audio_tour_number)"
+    "print(audio_tour_number)"
    ]
   },
   {
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -206,14 +206,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "[(1, ('The Two Fridas', 1939)), (2, ('My Dress Hangs Here', 1933)), (3, ('Tree of Hope', 1946)), (4, ('Self Portrait With Monkeys', 1940)), (5, ('The Broken Column', 1944)), (6, ('The Wounded Deer', 1946)), (7, ('Me and My Doll', 1937))]\n"
      ]
@@ -240,7 +240,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.7.6-final"
   }
  },
  "nbformat": 4,
