Added Additional Inspirations

--- a/Learning-Python/Codecademy/US_Medical_Insurance/us-medical-insurance-costs.ipynb
+++ b/Learning-Python/Codecademy/US_Medical_Insurance/us-medical-insurance-costs.ipynb
@@ -96,8 +96,19 @@
    "source": [
     "# To-Dos\n",
     "* Diagrams\n",
-    "* Unique values for descriptive columns\n",
-    "* Analysis of influence of factors"
+    "* Unique values for categorical data columns\n",
+    "* Analysis of influence of factors\n",
+    "\n",
+    "# Hints\n",
+    "* Find out the average age of the patients in the dataset.\n",
+    "* Analyze where a majority of the individuals are from.\n",
+    "* Look at the different costs between smokers vs. non-smokers.\n",
+    "* Figure out what the average age is for someone who has at least one child in this dataset.\n",
+    "\n",
+    "# Optional\n",
+    "* Organize your findings into dictionaries, lists, or another convenient datatype.\n",
+    "* Make predictions about what features are the most influential for an individual’s medical insurance charges based on your analysis.\n",
+    "* Explore areas where the data may include bias and how that would impact potential use cases."
    ],
    "cell_type": "markdown",
    "metadata": {}
