Added Additional Tasks

--- a/Learning-Python/Codecademy/US_Medical_Insurance/us-medical-insurance-costs.ipynb
+++ b/Learning-Python/Codecademy/US_Medical_Insurance/us-medical-insurance-costs.ipynb
@@ -98,6 +98,7 @@
     "* Diagrams\n",
     "* Unique values for categorical data columns\n",
     "* Analysis of influence of factors\n",
+    "* Do smokers have to pay 10x the amount of non-smokers?\n",
     "\n",
     "# Hints\n",
     "* Find out the average age of the patients in the dataset.\n",
@@ -108,7 +109,8 @@
     "# Optional\n",
     "* Organize your findings into dictionaries, lists, or another convenient datatype.\n",
     "* Make predictions about what features are the most influential for an individual’s medical insurance charges based on your analysis.\n",
-    "* Explore areas where the data may include bias and how that would impact potential use cases."
+    "* Explore areas where the data may include bias and how that would impact potential use cases.\n",
+    "* Is there measurable correlation between overweight and smokers?"
    ],
    "cell_type": "markdown",
    "metadata": {}
