--- a/Learning-Python/Codecademy/abruptly_goblins/Abruptly Goblins Planner.ipynb
+++ b/Learning-Python/Codecademy/abruptly_goblins/Abruptly Goblins Planner.ipynb
@@ -15,10 +15,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gamers = []"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -26,7 +28,7 @@
    "source": [
     "Now we want to create a function that will update this list and add a new gamer to the this `gamers` list. Each `gamer` should be a dictionary with the following keys:\n",
     " - `\"name\"`: a string that contains the gamer's full or presumed name. E.g., \"Vicky Very\"\n",
-    " - `\"availability\"`: a list of strings containing the names of the days of the week that the gamer is available. E.g., [\"Monday\", \"Thursday\", \"Sunday\"]\n",
+    " - `\"availability\"`: a list of strings containing the names of the days of the week that the gamer is available. E.g., `[\"Monday\", \"Thursday\", \"Sunday\"]`\n",
     " \n",
     "**Instructions**\n",
     "\n",
@@ -35,10 +37,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def add_gamer(gamer, gamers_list):\n",
+    "    keys = gamer.keys()\n",
+    "    if \"name\" in keys:\n",
+    "        if \"availability\" in keys:\n",
+    "            gamers_list.append(gamer)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -54,10 +62,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "kimberly = {\n",
+    "    \"name\": \"Kimberly Warner\",\n",
+    "    \"availability\": [\"Monday\", \"Thursday\", \"Friday\"]\n",
+    "}\n",
+    "\n",
+    "add_gamer(kimberly, gamers)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -68,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,10 +113,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "{'Monday': 0,\n",
+       " 'Tuesday': 0,\n",
+       " 'Wednesday': 0,\n",
+       " 'Thursday': 0,\n",
+       " 'Friday': 0,\n",
+       " 'Saturday': 0,\n",
+       " 'Sunday': 0}"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 5
+    }
+   ],
+   "source": [
+    "def build_daily_frequency_table():\n",
+    "    result = {}\n",
+    "    days = [\"Monday\", \"Tuesday\", \"Wednesday\", \"Thursday\", \"Friday\", \"Saturday\", \"Sunday\"]\n",
+    "    for day in days:\n",
+    "        result[day] = 0\n",
+    "    return result\n",
+    "\n",
+    "count_availability = build_daily_frequency_table()\n",
+    "count_availability"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -116,10 +158,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def calculate_availability(gamers_list, available_frequency):\n",
+    "    for gamer in gamers_list:\n",
+    "        for day in gamer[\"availability\"]:\n",
+    "            available_frequency[day] += 1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -134,12 +181,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "{'Monday': 5,\n",
+       " 'Tuesday': 3,\n",
+       " 'Wednesday': 4,\n",
+       " 'Thursday': 7,\n",
+       " 'Friday': 3,\n",
+       " 'Saturday': 4,\n",
+       " 'Sunday': 3}"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 7
+    }
+   ],
+   "source": [
+    "calculate_availability(gamers, count_availability)\n",
+    "count_availability"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -154,10 +221,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def find_best_night(availability_table):\n",
+    "    max_key = ''\n",
+    "    max_value = float(\"-inf\")\n",
+    "    for key, value in availability_table.items():\n",
+    "        if value > max_value:\n",
+    "            max_value = value\n",
+    "            max_key = key\n",
+    "    return max_key"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -173,10 +249,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'Thursday'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 9
+    }
+   ],
+   "source": [
+    "game_night = find_best_night(count_availability)\n",
+    "game_night"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -193,10 +283,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[{'name': 'Kimberly Warner', 'availability': ['Monday', 'Thursday', 'Friday']},\n",
+       " {'name': 'Thomas Nelson',\n",
+       "  'availability': ['Tuesday', 'Thursday', 'Saturday']},\n",
+       " {'name': 'Michelle Reyes',\n",
+       "  'availability': ['Wednesday', 'Thursday', 'Sunday']},\n",
+       " {'name': 'Stephen Adams', 'availability': ['Thursday', 'Saturday']},\n",
+       " {'name': 'Joanne Lynn', 'availability': ['Monday', 'Thursday']},\n",
+       " {'name': 'Crystal Brewer',\n",
+       "  'availability': ['Thursday', 'Friday', 'Saturday']},\n",
+       " {'name': 'James Barnes Jr.',\n",
+       "  'availability': ['Tuesday', 'Wednesday', 'Thursday', 'Sunday']}]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 10
+    }
+   ],
+   "source": [
+    "def available_on_night(gamers_list, day):\n",
+    "    return [gamer for gamer in gamers_list if day in gamer['availability']]\n",
+    "\n",
+    "attending_game_night = available_on_night(gamers, game_night)\n",
+    "attending_game_night"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -213,10 +330,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "form_email = 'Dear {name}, we would like to inform you that {game} will be played on {day_of_week}'"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -230,10 +349,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Dear Kimberly Warner, we would like to inform you that Abruptly Goblins! will be played on Thursday\nDear Thomas Nelson, we would like to inform you that Abruptly Goblins! will be played on Thursday\nDear Michelle Reyes, we would like to inform you that Abruptly Goblins! will be played on Thursday\nDear Stephen Adams, we would like to inform you that Abruptly Goblins! will be played on Thursday\nDear Joanne Lynn, we would like to inform you that Abruptly Goblins! will be played on Thursday\nDear Crystal Brewer, we would like to inform you that Abruptly Goblins! will be played on Thursday\nDear James Barnes Jr., we would like to inform you that Abruptly Goblins! will be played on Thursday\n"
+     ]
+    }
+   ],
+   "source": [
+    "def send_email(gamers_who_can_attend, day, game):\n",
+    "    for gamer in gamers_who_can_attend:\n",
+    "        print(form_email.format(name=gamer[\"name\"], game=game, day_of_week=day))\n",
+    "\n",
+    "send_email(attending_game_night, game_night, game='Abruptly Goblins!')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -253,10 +386,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'Monday'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 13
+    }
+   ],
+   "source": [
+    "unable_to_attend_best_night = [gamer for gamer in gamers if gamer not in attending_game_night]\n",
+    "\n",
+    "second_night_availability = build_daily_frequency_table()\n",
+    "\n",
+    "calculate_availability(unable_to_attend_best_night, second_night_availability)\n",
+    "\n",
+    "second_night = find_best_night(second_night_availability)\n",
+    "\n",
+    "second_night"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -272,17 +426,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Dear Kimberly Warner, we would like to inform you that Abruptly Goblins will be played on Monday\nDear Joyce Sellers, we would like to inform you that Abruptly Goblins will be played on Monday\nDear Joanne Lynn, we would like to inform you that Abruptly Goblins will be played on Monday\nDear Latasha Bryan, we would like to inform you that Abruptly Goblins will be played on Monday\nDear Michel Trujillo, we would like to inform you that Abruptly Goblins will be played on Monday\n"
+     ]
+    }
+   ],
+   "source": [
+    "available_second_game_night = available_on_night(gamers, second_night)\n",
+    "send_email(available_second_game_night, second_night, game=\"Abruptly Goblins\")"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python391jvsc74a57bd0ac59ebe37160ed0dfa835113d9b8498d9f09ceb179beaac4002f036b9467c963",
+   "display_name": "Python 3.9.1 64-bit"
   },
   "language_info": {
    "codemirror_mode": {
@@ -294,7 +458,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.9.1-final"
+  },
+  "metadata": {
+   "interpreter": {
+    "hash": "ac59ebe37160ed0dfa835113d9b8498d9f09ceb179beaac4002f036b9467c963"
+   }
   }
  },
  "nbformat": 4,
