Corrected Error Types table

--- a/Learning-Python/Codecademy/Hypothesis_Testing/04_Significance-Thresholds/script.ipynb
+++ b/Learning-Python/Codecademy/Hypothesis_Testing/04_Significance-Thresholds/script.ipynb
@@ -169,8 +169,8 @@
     "\r\n",
     "|Null hypothesis:|is true|is false|\r\n",
     "|:---------------|:------|:-------|\r\n",
-    "|P-value significant (p-value $> \\alpha$) |Type I Error|Correct!|\r\n",
-    "|P-value not significant (p-value $<= \\alpha$)|Correct!|Type II error|\r\n",
+    "|P-value significant (p-value $<= \\alpha$) |Type I Error|Correct!|\r\n",
+    "|P-value not significant (p-value $> \\alpha$)|Correct!|Type II error|\r\n",
     "\r\n",
     "Consider the quiz question hypothesis test described in the previous exercises:\r\n",
     "\r\n",
