--- a/Learning-Python/edX/SQL-for-Data-Science/Module-4_Accessing-Databases-using-Python/final_assignment.ipynb
+++ b/Learning-Python/edX/SQL-for-Data-Science/Module-4_Accessing-Databases-using-Python/final_assignment.ipynb
@@ -2487,10 +2487,15 @@
    ],
    "source": [
     "query = \"\"\"\n",
-    "SELECT COMMUNITY_AREA_NAME, PERCENT_HOUSEHOLDS_BELOW_POVERTY\n",
-    "FROM CENSUS_DATA\n",
-    "ORDER BY PERCENT_HOUSEHOLDS_BELOW_POVERTY DESC\n",
-    "LIMIT 5;\n",
+    "SELECT\n",
+    "    COMMUNITY_AREA_NAME,\n",
+    "    PERCENT_HOUSEHOLDS_BELOW_POVERTY\n",
+    "FROM\n",
+    "    CENSUS_DATA\n",
+    "ORDER BY\n",
+    "    PERCENT_HOUSEHOLDS_BELOW_POVERTY DESC\n",
+    "LIMIT\n",
+    "    5;\n",
     "\"\"\"\n",
     "df = pd.read_sql(query, con=cnx)\n",
     "df"
