--- a/Learning-Python/edX/SQL-for-Data-Science/Module-4_Accessing-Databases-using-Python/final_assignment.ipynb
+++ b/Learning-Python/edX/SQL-for-Data-Science/Module-4_Accessing-Databases-using-Python/final_assignment.ipynb
@@ -1828,94 +1828,41 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>COMMUNITY_AREA_NUMBER</th>\n",
        "      <th>COMMUNITY_AREA_NAME</th>\n",
-       "      <th>PERCENT_OF_HOUSING_CROWDED</th>\n",
-       "      <th>PERCENT_HOUSEHOLDS_BELOW_POVERTY</th>\n",
-       "      <th>PERCENT_AGED_16UNEMPLOYED</th>\n",
-       "      <th>PERCENT_AGED_25WITHOUT_HIGH_SCHOOL_DIPLOMA</th>\n",
-       "      <th>PERCENT_AGED_UNDER_18_OR_OVER_64</th>\n",
        "      <th>PER_CAPITA_INCOME</th>\n",
-       "      <th>HARDSHIP_INDEX</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>26</td>\n",
        "      <td>West Garfield Park</td>\n",
-       "      <td>9.4</td>\n",
-       "      <td>41.7</td>\n",
-       "      <td>25.8</td>\n",
-       "      <td>24.5</td>\n",
-       "      <td>43.6</td>\n",
        "      <td>10934</td>\n",
-       "      <td>92</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>30</td>\n",
        "      <td>South Lawndale</td>\n",
-       "      <td>15.2</td>\n",
-       "      <td>30.7</td>\n",
-       "      <td>15.8</td>\n",
-       "      <td>54.8</td>\n",
-       "      <td>33.8</td>\n",
        "      <td>10402</td>\n",
-       "      <td>96</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>37</td>\n",
        "      <td>Fuller Park</td>\n",
-       "      <td>3.2</td>\n",
-       "      <td>51.2</td>\n",
-       "      <td>33.9</td>\n",
-       "      <td>26.6</td>\n",
-       "      <td>44.9</td>\n",
        "      <td>10432</td>\n",
-       "      <td>97</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>54</td>\n",
        "      <td>Riverdale</td>\n",
-       "      <td>5.8</td>\n",
-       "      <td>56.5</td>\n",
-       "      <td>34.6</td>\n",
-       "      <td>27.5</td>\n",
-       "      <td>51.5</td>\n",
        "      <td>8201</td>\n",
-       "      <td>98</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   COMMUNITY_AREA_NUMBER COMMUNITY_AREA_NAME  PERCENT_OF_HOUSING_CROWDED  \\\n",
-       "0                     26  West Garfield Park                         9.4   \n",
-       "1                     30      South Lawndale                        15.2   \n",
-       "2                     37         Fuller Park                         3.2   \n",
-       "3                     54           Riverdale                         5.8   \n",
-       "\n",
-       "   PERCENT_HOUSEHOLDS_BELOW_POVERTY  PERCENT_AGED_16UNEMPLOYED  \\\n",
-       "0                              41.7                       25.8   \n",
-       "1                              30.7                       15.8   \n",
-       "2                              51.2                       33.9   \n",
-       "3                              56.5                       34.6   \n",
-       "\n",
-       "   PERCENT_AGED_25WITHOUT_HIGH_SCHOOL_DIPLOMA  \\\n",
-       "0                                        24.5   \n",
-       "1                                        54.8   \n",
-       "2                                        26.6   \n",
-       "3                                        27.5   \n",
-       "\n",
-       "   PERCENT_AGED_UNDER_18_OR_OVER_64  PER_CAPITA_INCOME  HARDSHIP_INDEX  \n",
-       "0                              43.6              10934              92  \n",
-       "1                              33.8              10402              96  \n",
-       "2                              44.9              10432              97  \n",
-       "3                              51.5               8201              98  "
+       "  COMMUNITY_AREA_NAME  PER_CAPITA_INCOME\n",
+       "0  West Garfield Park              10934\n",
+       "1      South Lawndale              10402\n",
+       "2         Fuller Park              10432\n",
+       "3           Riverdale               8201"
       ]
      },
      "execution_count": 11,
@@ -1926,7 +1873,8 @@
    "source": [
     "query = \"\"\"\n",
     "SELECT\n",
-    "    *\n",
+    "    COMMUNITY_AREA_NAME,\n",
+    "    PER_CAPITA_INCOME\n",
     "FROM\n",
     "    CENSUS_DATA\n",
     "WHERE\n",
@@ -1972,105 +1920,26 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>ID</th>\n",
        "      <th>CASE_NUMBER</th>\n",
-       "      <th>DATE</th>\n",
-       "      <th>BLOCK</th>\n",
-       "      <th>IUCR</th>\n",
-       "      <th>PRIMARY_TYPE</th>\n",
-       "      <th>DESCRIPTION</th>\n",
-       "      <th>LOCATION_DESCRIPTION</th>\n",
-       "      <th>ARREST</th>\n",
-       "      <th>DOMESTIC</th>\n",
-       "      <th>...</th>\n",
-       "      <th>DISTRICT</th>\n",
-       "      <th>WARD</th>\n",
-       "      <th>COMMUNITY_AREA_NUMBER</th>\n",
-       "      <th>FBICODE</th>\n",
-       "      <th>X_COORDINATE</th>\n",
-       "      <th>Y_COORDINATE</th>\n",
-       "      <th>YEAR</th>\n",
-       "      <th>LATITUDE</th>\n",
-       "      <th>LONGITUDE</th>\n",
-       "      <th>LOCATION</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>3987219</td>\n",
        "      <td>HL266884</td>\n",
-       "      <td>2005-03-31</td>\n",
-       "      <td>024XX N CLARK ST</td>\n",
-       "      <td>2210</td>\n",
-       "      <td>LIQUOR LAW VIOLATION</td>\n",
-       "      <td>SELL/GIVE/DEL LIQUOR TO MINOR</td>\n",
-       "      <td>CONVENIENCE STORE</td>\n",
-       "      <td>TRUE</td>\n",
-       "      <td>FALSE</td>\n",
-       "      <td>...</td>\n",
-       "      <td>19</td>\n",
-       "      <td>43</td>\n",
-       "      <td>7</td>\n",
-       "      <td>22</td>\n",
-       "      <td>1172680</td>\n",
-       "      <td>1916483</td>\n",
-       "      <td>2005</td>\n",
-       "      <td>41.92626872</td>\n",
-       "      <td>-87.64089934</td>\n",
-       "      <td>(41.926268719, -87.640899336)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>3266814</td>\n",
        "      <td>HK238408</td>\n",
-       "      <td>2004-03-13</td>\n",
-       "      <td>093XX S STONY ISLAND AVE</td>\n",
-       "      <td>2230</td>\n",
-       "      <td>LIQUOR LAW VIOLATION</td>\n",
-       "      <td>ILLEGAL CONSUMPTION BY MINOR</td>\n",
-       "      <td>ALLEY</td>\n",
-       "      <td>TRUE</td>\n",
-       "      <td>FALSE</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4</td>\n",
-       "      <td>8</td>\n",
-       "      <td>48</td>\n",
-       "      <td>22</td>\n",
-       "      <td>1188539</td>\n",
-       "      <td>1843379</td>\n",
-       "      <td>2004</td>\n",
-       "      <td>41.72530099</td>\n",
-       "      <td>-87.58496589</td>\n",
-       "      <td>(41.72530099, -87.584965887)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2 rows × 21 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        ID CASE_NUMBER        DATE                     BLOCK  IUCR  \\\n",
-       "0  3987219    HL266884  2005-03-31          024XX N CLARK ST  2210   \n",
-       "1  3266814    HK238408  2004-03-13  093XX S STONY ISLAND AVE  2230   \n",
-       "\n",
-       "           PRIMARY_TYPE                    DESCRIPTION LOCATION_DESCRIPTION  \\\n",
-       "0  LIQUOR LAW VIOLATION  SELL/GIVE/DEL LIQUOR TO MINOR    CONVENIENCE STORE   \n",
-       "1  LIQUOR LAW VIOLATION   ILLEGAL CONSUMPTION BY MINOR                ALLEY   \n",
-       "\n",
-       "  ARREST DOMESTIC  ... DISTRICT WARD COMMUNITY_AREA_NUMBER FBICODE  \\\n",
-       "0   TRUE    FALSE  ...       19   43                     7      22   \n",
-       "1   TRUE    FALSE  ...        4    8                    48      22   \n",
-       "\n",
-       "  X_COORDINATE Y_COORDINATE  YEAR     LATITUDE     LONGITUDE  \\\n",
-       "0      1172680      1916483  2005  41.92626872  -87.64089934   \n",
-       "1      1188539      1843379  2004  41.72530099  -87.58496589   \n",
-       "\n",
-       "                        LOCATION  \n",
-       "0  (41.926268719, -87.640899336)  \n",
-       "1   (41.72530099, -87.584965887)  \n",
-       "\n",
-       "[2 rows x 21 columns]"
+       "  CASE_NUMBER\n",
+       "0    HL266884\n",
+       "1    HK238408"
       ]
      },
      "execution_count": 12,
@@ -2081,7 +1950,7 @@
    "source": [
     "query = \"\"\"\n",
     "SELECT\n",
-    "    *\n",
+    "    CASE_NUMBER\n",
     "FROM\n",
     "    CHICAGO_CRIME_DATA\n",
     "WHERE\n",
